submission for hw5

--- a/PS5.Rmd
+++ b/PS5.Rmd
@@ -84,17 +84,13 @@ max(gapminder$time, na.rm=T)
 ```{r}
 gapminder %>%
   group_by(time) %>%
-  summarise(n = sum(is.na(co2))) %>%
-  arrange(desc(n)) %>%
-  head()
-```
-
-```{r}
+  summarise(co2miss = sum(is.na(co2)))
 gapminder %>%
+  select(co2,co2_PC,time) %>%
+  filter(is.na(co2),is.na(co2_PC)) %>%
   group_by(time) %>%
-  summarise(n=sum(is.na(co2_PC))) %>%
-  arrange(desc(n)) %>%
-  head()
+  summarise(allmiss = n()) %>%
+  arrange(desc(allmiss))
 ```
 
 2017 2018 2019
@@ -102,48 +98,49 @@ gapminder %>%
 ## 2 Make a plot of total CO2 emissions over time for the U.S, China, and India. Add a few more countries of your choice. Explain what do you see.
 ```{r}
 gapminder %>%
-  filter(name %in% c("United States of America", "China", "India", "Canada", "France")) %>%
-  ggplot(aes(x = time, y = co2, color = name)) + geom_line()
+  filter(name %in% c("United States of America", "China", "India", "Aruba", "Spain")) %>%
+  ggplot(aes(x = time, y = co2, color = name)) + geom_line() + geom_point(size = 1,shape = 21)
 ```
 
-There is an increasing pattern in the CO2 emissions for these countries, especially for China, United States of America and India.
+There is an increasing pattern in the CO2 emissions for these countries, especially for China.
 
 ## 3 Now let’s analyze the CO2 emissions per capita (co2_PC ). Make a similar plot of the same countries. What does this figure suggest?
 ```{r}
 gapminder %>%
-  filter(name %in% c("United States of America", "China", "India", "Canada", "France")) %>%
-  ggplot(aes(x=time, y=co2_PC, color = name)) + geom_line()
+  filter(name %in% c("United States of America", "China", "India", "Aruba", "Spain")) %>%
+  ggplot(aes(x=time, y=co2_PC, color = name)) + geom_line() + geom_point(size = 1,shape = 21)
 ```
 
-China and India have an increasing trend, while Canada, France and United States of America have an decreasing trend after 1980.
+aruba's CO2 emissions are very erratic and eventually drop sharply to stabilize.
 
 
 ## 4 Compute average CO2 emissions per capita across the continents (assume region is the same as continent). Comment what do you see.
 ```{r}
 gapminder %>%
-  group_by(time, region) %>%
-  summarise(co2_pc = mean(co2_PC, na.rm = T)) %>%
+  select(co2_PC,time,region) %>%
+  group_by(region) %>%
   na.omit() %>%
-  ggplot(aes(x = time, y = co2_pc, color = region)) + geom_line()
+  summarise(co2_pc_avg = mean(co2_PC)) %>%
+  arrange(desc(co2_pc_avg))
 ```
 
-The African has an increasing trend, while other regions have a decreasing trend after 1980.
+Europe has the highest average CO2 emissions in the world. Africa's lowest.
 
 ## 5 Make a barplot where you show the previous results–average CO2 emissions per capita across continents in 1960 and 2016.
 ```{r}
-gapminder %>%
-  group_by(time, region) %>%
-  summarise(co2_pc = mean(co2_PC, na.rm=T)) %>%
-  na.omit() %>%
+data1 = gapminder %>%
+  select(co2_PC,time,region) %>%
   filter(time %in% c(1960, 2016)) %>%
-  ggplot(aes(x = region, y = co2_pc, fill = factor(time))) + 
-  geom_col(position = position_dodge(), color = "black") +
-  labs(y="Average CO2 capita", 
-       x="Continent",
-       y="Year",
-       fill="Year") +
-  scale_fill_manual(values = c("#34356c", "#e7d292"))
+  group_by(region,time) %>%
+  na.omit() %>% 
+  summarise(co2_pc_avg = mean(co2_PC))%>%
+  arrange(desc(co2_pc_avg))
+
+data1%>%
+  ggplot(aes(x =region,y = co2_pc_avg, fill = factor(time))) + 
+  geom_col(position = position_dodge())
 ```
+
 
 ## 6 Which countries are the three largest, and three smallest CO2 emitters (in terms of CO2 per capita) in 2019 for each continent? (Assume region is continent).
 ```{r}
@@ -164,43 +161,44 @@ gapminder %>%
 # 4. GDP per capita
 ## 1 Make a scatterplot of GDP per capita versus life expectancy by country, using data for 1960. Make the point size dependent on the country size, and color those according to the continent. Feel free to adjust the plot in other ways to make it better. Comment what do you see there.
 ```{r}
-ggplot(gapminder %>%
-         filter(time==1960, !is.na(region)) ,
-       aes(x=lifeExpectancy, y=GDP_PC,
-           size=totalPopulation, 
+gapminder %>%
+  select(time,lifeExpectancy,totalPopulation,region,GDP_PC)%>%
+  filter(time==1960)%>%
+  ggplot(aes(x=lifeExpectancy, y=GDP_PC,size=totalPopulation, 
            color=region
-           )) + geom_point() 
+           )) + geom_point() +labs(y="Year 1960")
 
 ```
 
-There is a positive association between the life expectancy and GDP per capita.
+There is a positive association between the life GDP and lifeExpectancy per capita.
 
 ## 2 Make a similar plot, but this time use 2019 data only.
 ```{r}
-ggplot(gapminder %>%
-         filter(time == 2019, !is.na(region)),
-       aes(x = lifeExpectancy,
-           y = GDP_PC,
-           size = totalPopulation, 
+gapminder %>%
+  select(time,lifeExpectancy,totalPopulation,region,GDP_PC)%>%
+  filter(time==2019)%>%
+  ggplot(aes(x=lifeExpectancy, y=GDP_PC,size=totalPopulation, 
            color=region
-           )) + geom_point() 
+           )) + geom_point()+labs(y="Year 2019")
 ```
 
 ## 3 Compare these two plots and comment what do you see. How has world developed through the last 60 years?
-The average life expectancy has increased by about 10 years, the GDP also has increased.
+when the life expectancy is increased, the gdp is increased too.
 
 ## 4 Compute the average life expectancy for each continent in 1960 and 2019. Do the results fit with what do you see on the figures?
 ```{r}
 gapminder %>%
-  filter(!is.na(region)) %>% 
+  select(time,lifeExpectancy,region)%>%
   filter(time %in% c(1960, 2019)) %>%
   group_by(region, time) %>%
-  summarise(lifeExpectancy=mean(lifeExpectancy, na.rm = T)) %>%
-  spread(key = time, value = lifeExpectancy)
+  na.omit() %>%
+  summarise(lifeExpectancy_avg=mean(lifeExpectancy)) %>%
+  ggplot(aes(x =region,y = lifeExpectancy_avg, fill = factor(time))) + 
+  geom_col(position = position_dodge())
 ```
 
 
-Yes, the results fit with what we see on the figures.
+Yes, the results fit with figure.
 
 ## 5 Compute the average LE growth from 1960-2019 across the continents. Show the results in the order of growth. Explain what do you see.
 
@@ -214,14 +212,16 @@ gapminder %>%
   na.omit()
 ```
 
-The Europe has the highest life expectancy growth rate, while Afirca has the lowest growth rate.
+Europe has the highest life expectancy growth rate 0.20342406, while Afirca has the lowest growth rate -0.09005347.
 
 ## 6 Show the histogram of GDP per capita for years of 1960 and 2019. Try to put both histograms on the same graph, see how well you can do it!
 ```{r}
 gapminder %>%
+  select(time,GDP_PC)%>%
   filter(time%in% c(1960, 2019)) %>%
-  ggplot(aes(x = GDP_PC, fill = factor(time))) + geom_histogram(color = "white") +
-  labs(fill =" Yera", xlab = "GDP Per Capita")
+  na.omit() %>%
+  ggplot(aes(x = GDP_PC, fill = factor(time))) + geom_histogram(color = "black") +
+  labs(fill =" Year", xlab = "GDP Per Capita")
 ```
 
 ## 7 What was the ranking of US in terms of life expectancy in 1960 and in 2019? (When counting from top.)
@@ -229,7 +229,7 @@ gapminder %>%
 gapminder %>%
   filter(!is.na(name)) %>%
   group_by(time) %>%
-  mutate(rank=rank(-lifeExpectancy)) %>%
+  mutate(rank = rank(-lifeExpectancy)) %>%
   filter(time %in% c(1960, 2019), name =="United States of America") %>% 
   select(time, rank)
 ```
@@ -239,9 +239,10 @@ gapminder %>%
 gapminder %>%
   filter(!is.na(name)) %>%
   group_by(time) %>% 
-  mutate(r = rank(lifeExpectancy),
+  mutate(r = rank(-lifeExpectancy),
          relative_rank=r/sum(!is.na(lifeExpectancy))) %>%
   filter(time %in% c(1960, 2019), name =="United States of America") %>% 
   select(time, relative_rank)
 ```
 
+5.5 hours
